fix spacing in features section

--- a/css/main.css
+++ b/css/main.css
@@ -156,25 +156,33 @@ a {
     align-items: center;
 }
 .one .split img {
-    margin-right: 3em;
+    margin: 0 3em;
     border-radius: 4px;
 }
 .one section h2 {
-    font-size: 1.75em;
+    font-size: 2.5em;
     margin-left: 2.5em;
 }
 .one .features {
     display: flex;
     flex-flow: row wrap;
     margin-top: 3em;
+    padding-left: 5em;
 }
 .one .features article {
     width: 50%;
     display: flex;
     flex-flow: row nowrap;
     box-sizing: border-box;
-    padding: 2em;
     border: solid 1px #fff;
+}
+.one .features article:nth-of-type(1),
+.one .features article:nth-of-type(3) {
+    padding: 2em 2em 2em 0;
+}
+.one .features article:nth-of-type(2),
+.one .features article:nth-of-type(4) {
+    padding: 2em 0 2em 2em;
 }
 .one .features article:nth-of-type(1) {
     border-right-color: rgba(144, 144, 144, 0.25);
@@ -196,6 +204,12 @@ a {
 }
 .one .features .icon p {
     color: #5a5a5a;
+}
+.one .features .inner-text h3 {
+    font-size: 1.4em;
+}
+.one .features .inner-text p {
+    font-size: 1.1em;
 }
 
 /* ===== STATS ===== */
